# awesome-agent-toolkit

./: .gitignore  README.md  ai-tool-configuration-guide.md
examples/: .mcp.json  opencode.json
examples/.agents/rules/: mcp-feedback-enhanced.md
examples/.agents/skills/ielts-writing-task1-examiner/: SKILL.md
examples/.agents/skills/ielts-writing-task2-examiner/: SKILL.md
examples/.agents/skills/product-prd/: SKILL.md
examples/.claude/skills/check-codex-reset-credits/: SKILL.md
examples/.claude/skills/ielts-writing-task2-examiner/: SKILL.md
examples/.claude/skills/pdf/: pyproject.toml
examples/.codex/: config.toml
mcp-configs/: mcp-database-server.json  mcp-feedback-enhanced.json
rules/: mcp-feedback-enhanced.md
skills/check-codex-reset-credits/scripts/: check_reset_credits.py
skills/excalidraw-diagram/: SKILL.md
skills/excalidraw-diagram/references/: render_excalidraw.py
skills/ielts-writing-task1-examiner/: SKILL.md
skills/ielts-writing-task1-examiner/examples/: IELTS-Writing-Task1-20260413.md
skills/ielts-writing-task1-examiner/references/: band-descriptors-task1.md
skills/ielts-writing-task2-examiner/examples/: IELTS-Writing-Task2-20260426-Lilie.md  IELTS-Writing-Task2-20260426-writing9.md
skills/ielts-writing-task2-examiner/references/: assessment-criteria.md
skills/pdf/: SKILL.md  forms.md
skills/product-prd/examples/: PRD.md
skills/skill-creator-openai/: SKILL.md
skills/spec-driven-development/templates/: implementation-template.md  walk-through-template.md
skills/ui-ux-pro-max/: SKILL.md
(+12 files in other folders)
