[project]
name = "awesome-agent-toolkit-pdf-skill"
version = "0.1.0"
description = "Isolated Python environment for the PDF skill"
requires-python = ">=3.11"
dependencies = [
  "pdf2image>=1.17.0",
  "pdfplumber>=0.11.0",
  "pillow>=10.0.0",
  "pypdf>=5.0.0",
]

[project.optional-dependencies]
ocr = [
  "pytesseract>=0.3.10",
]
pdf-create = [
  "reportlab>=4.0.0",
]
tables = [
  "openpyxl>=3.1.0",
  "pandas>=2.0.0",
]
advanced = [
  "numpy>=1.26.0",
  "pypdfium2>=4.30.0",
]

[tool.uv]
package = false
